--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,8 +1,17 @@
 <% @links.each do |link| %>
-  <div class="link row clearfix">
-    <h2>
-      <%= link_to link.title, link %><br>
-      <small class="author">Submitted <%= time_ago_in_words(link.created_at) %> by <%= link.user.email %></small>
-    </h2>
-  </div>
+  <h4>
+    <%= link_to link.title, link %><br>
+    Submitted <%= time_ago_in_words(link.created_at) %> by <%= link.user.email %>
+  </h4>
+
+  <%= link_to like_link_path(link), method: :put do %>
+    Upvote
+    <%= link.get_upvotes.size %>
+  <% end %>
+
+  <%= link_to dislike_link_path(link), method: :put do %>
+    Downvote
+    <%= link.get_downvotes.size %>
+  <% end %>
+
 <% end %>
